@@ -41,6 +41,7 @@ enum StatusMode
     STATUSMODE_VIDEOTX          = 0x00000200,
     STATUSMODE_DESKTOP          = 0x00000400,
     STATUSMODE_STREAM_MEDIAFILE = 0x00000800,
+    STATUSMODE_STREAM_MEDIAFILE_PAUSED = 0x00002000,
     STATUSMODE_GENDER_MASK = (STATUSMODE_MALE | STATUSMODE_FEMALE | STATUSMODE_NEUTRAL),
 };
 
